# DVD_Screensaver

./: CMakeLists.txt  readme.md
App/: CApp.cpp  CApp.h
Entities/: CMobile.cpp  CMobile.h
src/: main.cpp
